# Computer

./: Assembler.hs  Assembly.hs  Emulator.hs  Fib.asm  LICENSE  Main.hs  README  computer.cabal
Documentation/InstructionEncoding/: InstructionEncoding.tex
Emulator/: Assembler.hs  Assembly.hs  Disassembler.hs  Emulator.hs  MachineInteger.hs  Main.hs  computer.cabal
Emulator/FPGA/: ALU.sym  ALU.vhd  BasysRevEGeneral.ucf  BussedALU.sch  BussedALU.sym  Debouncer.vhd  InputController.sym  InputController.vhd  MainCPU.xise  MicrocodeProcessor.sym  MicrocodeProcessor.vhd  RAM.sym  RAM.vhd  Seg7Driver.sym  Seg7Driver.vhd  TopLevel.sch  WordRegister.sym  WordRegister.vhd  toplevel.bit
Emulator/Samples/: Factorial.asm  Fib.asm
